# vsm_visualizer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
example_data/axis-1-FullDataSet/: Sequence_260226_CCSO_SAMPLE1_New_Batch_MT_MH_axis-1.seq
src/vsm_visualizer/: __init__.py  ppms_adapter.py  ui.py  vsm_data_processor.py
src/vsm_visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
web/: build_web.py
